Revert "finishing image gallery task"
This reverts commit a5a40cb70fac0676a5d1088a33087c8993ae5869.

--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ header .bar-button:focus {
   height: 100vh;
   background-image: url("../imgs/drew-coffman-1872.jpg");
   background-size: cover;
-  background-position: center center;
+  background-position: center;
   position: relative;
 }
 
